fix header alignment, reload page on click

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -25,3 +25,9 @@
 .plex-requests__header-item {
   padding: 0 5px;
 }
+
+.plex-requests__header-title {
+  text-decoration: none;
+  color: $solid-white;
+  padding: 22px 10px;
+}
